--- a/pug/blocks/_block-blog.pug
+++ b/pug/blocks/_block-blog.pug
@@ -1,23 +1,23 @@
 // Блоки блога
 .cards
-	.card.cardFull-head_special
+	.card.card-full-head_special
 		.content-title
 			.content-titlebox_dark
 				h4 Блоки блога
-	.card.cardFull-head_special
+	.card.card-full-head_special
 		.content-title
 			.content-titlebox
 				h2 Блоги 2018
 	include ../cards/_cards-third-slider
 
-	.card.cardFull-head_special
+	.card.card-full-head_special
 		.content-title
 			.content-titlebox
 				h2 Лучшие блогеры тысячелетия
 	include ../cards/_cards-fifth-slider
 	.card
 		hr.card-hr
-	article(id=ID).article.articlePreview
+	article(id=ID).article.article-preview
 		.card
 			.article-imgwrap.article-imgwrap_slim
 				.article-imgbox.article-imgbox_slim(style='background-image: url(img/article-prev-img-01.jpg);')
@@ -28,10 +28,10 @@
 				.article-title.content-titlebox
 					h3 Хочется лета, а вокруг одни офисы! Поеду на Ямайку!
 
-			.article-text.articlePreview-text
+			.article-text.article-preview-text
 				p
 					| Ямайка находится в зоне тропического климата с господством северо-восточных пассатов, заметно влияющих, наравне с показателем абсолютной высоты местности, на климат страны В столичном районе средняя температура за год меняется от 24 до 27 °C, а в местечке Гордон-Хилл в горах Блу-Маунтинс — от температура температура температура
-	article(id=ID).article.articlePreview
+	article(id=ID).article.article-preview
 		.card
 			.article-imgwrap.article-imgwrap_slim
 				.article-imgbox.article-imgbox_slim(style='background-image: url(img/article-prev-img-02.jpg);')
@@ -41,7 +41,7 @@
 				.article-title.content-titlebox
 					h3 Как вам прошедший концерт?
 
-			.article-text.articlePreview-text
+			.article-text.article-preview-text
 				p
 					| Ямайка находится в зоне тропического климата с господством северо-восточных пассатов, заметно влияющих, наравне с показателем абсолютной высоты местности, на климат страны В столичном районе средняя температура за год меняется от 24 до 27 °C, а в местечке Гордон-Хилл в горах Блу-Маунтинс — от...
 		.card
