--- a/pug/blocks/_block-links.pug
+++ b/pug/blocks/_block-links.pug
@@ -1,6 +1,6 @@
 // Документы (Блоки ссылок)
 .cards
-	.card.cardFull-head_special
+	.card.card-full-head_special
 		.content-title
 			.content-titlebox_dark
 				h4 Документы (Блоки ссылок)
