--- a/pug/blocks/_block-min-imgl-text.pug
+++ b/pug/blocks/_block-min-imgl-text.pug
@@ -1,13 +1,13 @@
 // Текст + Изображение, тип "Текст справа (мини)", с заголовком и без
 .cards
-	.card.cardFull-head_special
+	.card.card-full-head_special
 		.content-title
 			.content-titlebox_dark
 				h4 Текст + Изображение, тип "2 колонки", возможность задать фикс. текст
 		.content-title
 			.content-titlebox
 				h2 Благодарность всем сотрудникам подразделения
-	.card.cardFull-head_special
+	.card.card-full-head_special
 		.tag
 			.card-date
 				span 24 Сентября 2018
