--- a/pug/cards/_card-full.pug
+++ b/pug/cards/_card-full.pug
@@ -1,9 +1,9 @@
-.card.cardFull
-	.card-wrap.cardFull-wrap
-		.cardFull__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
+.card.card-full
+	.card-wrap.card-full-wrap
+		.card-full__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
 			.card-warning-text.hide
 				p
-		.card__content.cardFull__content
+		.card__content.card-full__content
 			.tagbox
 				.tag
 					button.button.button-tag Новости ОМК
@@ -14,9 +14,9 @@
 					button.like-button
 						i.icon-like
 						span.like-count 1286
-			.card__title.cardFull__title
+			.card__title.card-full__title
 				a(href='#') Хороший старт!
-			.card__text.cardFull__text
+			.card__text.card-full__text
 				p
 					| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
 			.card-date
