--- a/pug/cards/_card-full_imgfullheight.pug
+++ b/pug/cards/_card-full_imgfullheight.pug
@@ -1,6 +1,6 @@
-.card.cardFull.cardFull_fullHeightImg
-	.card-wrap.cardFull-wrap.cardFull-wrap_fullHeightImg(style='background-image: url(img/news-full.jpg);')
-		.card__content.cardFull__content
+.card.card-full.card-full_fullHeightImg
+	.card-wrap.card-full-wrap.card-full-wrap_fullHeightImg(style='background-image: url(img/news-full.jpg);')
+		.card__content.card-full__content
 			.tagbox
 				.tag
 					button.button.button-tag.button-tag_dark Новости ОМК
@@ -11,9 +11,9 @@
 					button.like-button.like-button_light
 						i.icon-like
 						span.like-count 1286
-			.card__title.cardFull__title
+			.card__title.card-full__title
 				a(href='#') Хороший старт!
-			.card__text.cardFull__text
+			.card__text.card-full__text
 				p
 					| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
 			.card-date.card-date_light
