--- a/pug/cards/_card-third-slider-3x3.pug
+++ b/pug/cards/_card-third-slider-3x3.pug
@@ -1,10 +1,10 @@
-.card.cardFull.cardFull-slider
-	.cardFull-slider-wrap.card-wrap.cardFull-wrap
+.card.card-full.card-full-slider
+	.card-full-slider-wrap.card-wrap.card-full-wrap
 		//- - var i = '01';
 		- var imgClass = '';
 		- var imgBoxClass ='';
 
-		.cardFull-slider__item
+		.card-full-slider__item
 			.card__imgwrap.card__imgwrap_slim
 				- var items = ['03', '12', '01'];
 				each item in items
@@ -24,7 +24,7 @@
 					.article-imgbox.article-imgbox_third(style='background-image: url('+imgUrl+')', class=imgBoxClass)
 						img(src=imgUrl, class=imgClass)
 
-		.cardFull-slider__item
+		.card-full-slider__item
 			.card__imgwrap.card__imgwrap_slim
 				- var items = ['03', '12', '01'];
 				each item in items
@@ -44,7 +44,7 @@
 					.article-imgbox.article-imgbox_third(style='background-image: url('+imgUrl+')', class=imgBoxClass)
 						img(src=imgUrl, class=imgClass)
 
-		.cardFull-slider__item
+		.card-full-slider__item
 			.card__imgwrap.card__imgwrap_slim
 				- var items = ['03', '12', '01'];
 				each item in items
