--- a/pug/cards/_card-twothird-third-slider.pug
+++ b/pug/cards/_card-twothird-third-slider.pug
@@ -1,4 +1,4 @@
-.card.cardFull.cardFull-slider#cardModalSlider-02
+.card.card-full.card-full-slider#cardModalSlider-02
 	.post-info
 		.post-info__title
 			span.slider-number #54 из 82:
@@ -10,8 +10,8 @@
 					i.icon-like
 					span.like-count 1586
 	include ../modals/_modal-content-comments
-	.cardFull-slider-wrap.card-wrap.cardFull-wrap
-		.cardFull-slider__item
+	.card-full-slider-wrap.card-wrap.card-full-wrap
+		.card-full-slider__item
 			.card__imgwrap
 				- var imgUrl='img/article-img-02.jpg';
 				.card__imgbox.card__imgbox_twothird(style='background-image: url('+imgUrl+')', data-target="#modalContentSlider", data-toggle="modal", data-target-content='#cardModalSlider-02')
@@ -19,7 +19,7 @@
 				- var imgUrl = 'img/article-img-01.jpg';
 				.card__imgbox.card__imgbox_third(style='background-image: url('+imgUrl+')',  data-target="#modalContentSlider", data-toggle="modal",data-target-content='#cardModalSlider-02')
 					img.card-image(src=imgUrl)
-		.cardFull-slider__item
+		.card-full-slider__item
 			.card__imgwrap
 				- var imgUrl='img/article-img-02.jpg';
 				.card__imgbox.card__imgbox_twothird(style='background-image: url('+imgUrl+')', data-target="#modalContentSlider", data-toggle="modal", data-target-content='#cardModalSlider-02')
