--- a/pug/cards/_cards-full-galery-slider-imgfull-text.pug
+++ b/pug/cards/_cards-full-galery-slider-imgfull-text.pug
@@ -1,5 +1,5 @@
 .cards
-	.card.cardFull-head_special
+	.card.card-full-head_special
 		.content-title
 			.content-titlebox_dark
 				h2 Галерея - "Слайдер с описанием", тип "Светлый"
@@ -12,11 +12,11 @@
 		- var text= '24 Сентября 2018';
 		include ../modules/_tag-box
 
-	.card.cardFull.cardFull-slider
-		.cardFull-slider-wrap.card-wrap.cardFull-wrap
+	.card.card-full.card-full-slider
+		.card-full-slider-wrap.card-wrap.card-full-wrap
 			
-			.cardFull-slider__item
-				.cardFull-wrap_fullHeightImg.card__imgbox(style='background-image: url(img/article-img-01.jpg);')
+			.card-full-slider__item
+				.card-full-wrap_fullHeightImg.card__imgbox(style='background-image: url(img/article-img-01.jpg);')
 					img(src="img/article-img-01.jpg", alt="image")
 					.card__info.card__info_xl.card__info_light
 						.content-title
@@ -29,8 +29,8 @@
 							p
 								| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке
 								
-			.cardFull-slider__item
-				.cardFull-wrap_fullHeightImg.card__imgbox(style='background-image: url(img/news-twothirds-img-01.jpg);')
+			.card-full-slider__item
+				.card-full-wrap_fullHeightImg.card__imgbox(style='background-image: url(img/news-twothirds-img-01.jpg);')
 					img(src="img/article-img-01.jpg", alt="image")
 					.card__info.card__info_xl.card__info_light
 						.content-title
