--- a/pug/cards/_cards-galery-slider-thirds.pug
+++ b/pug/cards/_cards-galery-slider-thirds.pug
@@ -1,5 +1,5 @@
 .cards
-	.card.cardFull-head_special
+	.card.card-full-head_special
 		.content-title
 			.content-titlebox_dark
 				h2 Галерея - "Слайдер", тип "3"
