--- a/pug/index.pug
+++ b/pug/index.pug
@@ -111,12 +111,12 @@ block content
 						| трубы ТЭСЦ-1
 				.card-date
 					span 24 Сентября 2018
-	.card.cardFull
-		.card-wrap.cardFull-wrap
-			.cardFull__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
+	.card.card-full
+		.card-wrap.card-full-wrap
+			.card-full__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
 				.card-warning-text.hide
 					p
-			.card__content.cardFull__content
+			.card__content.card-full__content
 				.tagbox
 					.tag
 						button.button.button-tag Новости ОМК
@@ -127,9 +127,9 @@ block content
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardFull__title
+				.card__title.card-full__title
 					a(href='#') Хороший старт!
-				.card__text.cardFull__text
+				.card__text.card-full__text
 					p
 						| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
 				.card-date
@@ -341,9 +341,9 @@ block content
 				.card-date.card-date_light
 					span 24 Сентября 2018
 	// строка
-	.card.cardFull.cardFull_fullHeightImg
-		.card-wrap.cardFull-wrap.cardFull-wrap_fullHeightImg(style='background-image: url(img/news-full.jpg);')
-			.card__content.cardFull__content
+	.card.card-full.card-full_fullHeightImg
+		.card-wrap.card-full-wrap.card-full-wrap_fullHeightImg(style='background-image: url(img/news-full.jpg);')
+			.card__content.card-full__content
 				.tagbox
 					.tag
 						button.button.button-tag.button-tag_dark Новости ОМК
@@ -354,9 +354,9 @@ block content
 						button.like-button.like-button_light
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardFull__title
+				.card__title.card-full__title
 					a(href='#') Хороший старт!
-				.card__text.cardFull__text
+				.card__text.card-full__text
 					p
 						| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
 				.card-date.card-date_light
@@ -452,12 +452,12 @@ block content
 						| трубы ТЭСЦ-1
 				.card-date
 					span 24 Сентября 2018
-	.card.cardFull
-		.card-wrap.cardFull-wrap
-			.cardFull__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
+	.card.card-full
+		.card-wrap.card-full-wrap
+			.card-full__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
 				.card-warning-text.hide
 					p
-			.card__content.cardFull__content
+			.card__content.card-full__content
 				.tagbox
 					.tag
 						button.button.button-tag Новости ОМК
@@ -468,9 +468,9 @@ block content
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardFull__title
+				.card__title.card-full__title
 					a(href='#') Хороший старт!
-				.card__text.cardFull__text
+				.card__text.card-full__text
 					p
 						| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
 				.card-date
@@ -682,9 +682,9 @@ block content
 				.card-date.card-date_light
 					span 24 Сентября 2018
 	// строка
-	.card.cardFull.cardFull_fullHeightImg
-		.card-wrap.cardFull-wrap.cardFull-wrap_fullHeightImg(style='background-image: url(img/news-full.jpg);')
-			.card__content.cardFull__content
+	.card.card-full.card-full_fullHeightImg
+		.card-wrap.card-full-wrap.card-full-wrap_fullHeightImg(style='background-image: url(img/news-full.jpg);')
+			.card__content.card-full__content
 				.tagbox
 					.tag
 						button.button.button-tag.button-tag_dark Новости ОМК
@@ -695,9 +695,9 @@ block content
 						button.like-button.like-button_light
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardFull__title
+				.card__title.card-full__title
 					a(href='#') Хороший старт!
-				.card__text.cardFull__text
+				.card__text.card-full__text
 					p
 						| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
 				.card-date.card-date_light
@@ -793,12 +793,12 @@ block content
 						| трубы ТЭСЦ-1
 				.card-date
 					span 24 Сентября 2018
-	.card.cardFull
-		.card-wrap.cardFull-wrap
-			.cardFull__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
+	.card.card-full
+		.card-wrap.card-full-wrap
+			.card-full__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
 				.card-warning-text.hide
 					p
-			.card__content.cardFull__content
+			.card__content.card-full__content
 				.tagbox
 					.tag
 						button.button.button-tag Новости ОМК
@@ -809,9 +809,9 @@ block content
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardFull__title
+				.card__title.card-full__title
 					a(href='#') Хороший старт!
-				.card__text.cardFull__text
+				.card__text.card-full__text
 					p
 						| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
 				.card-date
@@ -1023,9 +1023,9 @@ block content
 				.card-date.card-date_light
 					span 24 Сентября 2018
 	// строка
-	.card.cardFull.cardFull_fullHeightImg
-		.card-wrap.cardFull-wrap.cardFull-wrap_fullHeightImg(style='background-image: url(img/news-full.jpg);')
-			.card__content.cardFull__content
+	.card.card-full.card-full_fullHeightImg
+		.card-wrap.card-full-wrap.card-full-wrap_fullHeightImg(style='background-image: url(img/news-full.jpg);')
+			.card__content.card-full__content
 				.tagbox
 					.tag
 						button.button.button-tag.button-tag_dark Новости ОМК
@@ -1036,9 +1036,9 @@ block content
 						button.like-button.like-button_light
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardFull__title
+				.card__title.card-full__title
 					a(href='#') Хороший старт!
-				.card__text.cardFull__text
+				.card__text.card-full__text
 					p
 						| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
 				.card-date.card-date_light
@@ -1134,12 +1134,12 @@ block content
 						| трубы ТЭСЦ-1
 				.card-date
 					span 24 Сентября 2018
-	.card.cardFull
-		.card-wrap.cardFull-wrap
-			.cardFull__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
+	.card.card-full
+		.card-wrap.card-full-wrap
+			.card-full__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
 				.card-warning-text.hide
 					p
-			.card__content.cardFull__content
+			.card__content.card-full__content
 				.tagbox
 					.tag
 						button.button.button-tag Новости ОМК
@@ -1150,9 +1150,9 @@ block content
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardFull__title
+				.card__title.card-full__title
 					a(href='#') Хороший старт!
-				.card__text.cardFull__text
+				.card__text.card-full__text
 					p
 						| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
 				.card-date
@@ -1364,9 +1364,9 @@ block content
 				.card-date.card-date_light
 					span 24 Сентября 2018
 	// строка
-	.card.cardFull.cardFull_fullHeightImg
-		.card-wrap.cardFull-wrap.cardFull-wrap_fullHeightImg(style='background-image: url(img/news-full.jpg);')
-			.card__content.cardFull__content
+	.card.card-full.card-full_fullHeightImg
+		.card-wrap.card-full-wrap.card-full-wrap_fullHeightImg(style='background-image: url(img/news-full.jpg);')
+			.card__content.card-full__content
 				.tagbox
 					.tag
 						button.button.button-tag.button-tag_dark Новости ОМК
@@ -1377,9 +1377,9 @@ block content
 						button.like-button.like-button_light
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardFull__title
+				.card__title.card-full__title
 					a(href='#') Хороший старт!
-				.card__text.cardFull__text
+				.card__text.card-full__text
 					p
 						| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
 				.card-date.card-date_light
@@ -1475,12 +1475,12 @@ block content
 						| трубы ТЭСЦ-1
 				.card-date
 					span 24 Сентября 2018
-	.card.cardFull
-		.card-wrap.cardFull-wrap
-			.cardFull__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
+	.card.card-full
+		.card-wrap.card-full-wrap
+			.card-full__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
 				.card-warning-text.hide
 					p
-			.card__content.cardFull__content
+			.card__content.card-full__content
 				.tagbox
 					.tag
 						button.button.button-tag Новости ОМК
@@ -1491,9 +1491,9 @@ block content
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardFull__title
+				.card__title.card-full__title
 					a(href='#') Хороший старт!
-				.card__text.cardFull__text
+				.card__text.card-full__text
 					p
 						| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
 				.card-date
@@ -1705,9 +1705,9 @@ block content
 				.card-date.card-date_light
 					span 24 Сентября 2018
 	// строка
-	.card.cardFull.cardFull_fullHeightImg
-		.card-wrap.cardFull-wrap.cardFull-wrap_fullHeightImg(style='background-image: url(img/news-full.jpg);')
-			.card__content.cardFull__content
+	.card.card-full.card-full_fullHeightImg
+		.card-wrap.card-full-wrap.card-full-wrap_fullHeightImg(style='background-image: url(img/news-full.jpg);')
+			.card__content.card-full__content
 				.tagbox
 					.tag
 						button.button.button-tag.button-tag_dark Новости ОМК
@@ -1718,9 +1718,9 @@ block content
 						button.like-button.like-button_light
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardFull__title
+				.card__title.card-full__title
 					a(href='#') Хороший старт!
-				.card__text.cardFull__text
+				.card__text.card-full__text
 					p
 						| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
 				.card-date.card-date_light
@@ -1816,12 +1816,12 @@ block content
 						| трубы ТЭСЦ-1
 				.card-date
 					span 24 Сентября 2018
-	.card.cardFull
-		.card-wrap.cardFull-wrap
-			.cardFull__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
+	.card.card-full
+		.card-wrap.card-full-wrap
+			.card-full__imgbox.card__imgbox(style='background-image: url(img/news-full.jpg);')
 				.card-warning-text.hide
 					p
-			.card__content.cardFull__content
+			.card__content.card-full__content
 				.tagbox
 					.tag
 						button.button.button-tag Новости ОМК
@@ -1832,9 +1832,9 @@ block content
 						button.like-button
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardFull__title
+				.card__title.card-full__title
 					a(href='#') Хороший старт!
-				.card__text.cardFull__text
+				.card__text.card-full__text
 					p
 						| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
 				.card-date
@@ -2046,9 +2046,9 @@ block content
 				.card-date.card-date_light
 					span 24 Сентября 2018
 	// строка
-	.card.cardFull.cardFull_fullHeightImg
-		.card-wrap.cardFull-wrap.cardFull-wrap_fullHeightImg(style='background-image: url(img/news-full.jpg);')
-			.card__content.cardFull__content
+	.card.card-full.card-full_fullHeightImg
+		.card-wrap.card-full-wrap.card-full-wrap_fullHeightImg(style='background-image: url(img/news-full.jpg);')
+			.card__content.card-full__content
 				.tagbox
 					.tag
 						button.button.button-tag.button-tag_dark Новости ОМК
@@ -2059,9 +2059,9 @@ block content
 						button.like-button.like-button_light
 							i.icon-like
 							span.like-count 1286
-				.card__title.cardFull__title
+				.card__title.card-full__title
 					a(href='#') Хороший старт!
-				.card__text.cardFull__text
+				.card__text.card-full__text
 					p
 						| Беговая команда ОМК в этом году впервые в истории приняла участие в Московском марафоне
 				.card-date.card-date_light
