--- a/pug/others.pug
+++ b/pug/others.pug
@@ -39,12 +39,12 @@ block content
 		.content-title
 			.content-titlebox_dark.content-titlebox_collapse(data-toggle="collapse" data-target="#articleCollapseSlider01")
 				h4 Контент-слайдер - это многостраничный спойлер
-	#articleCollapseSlider01.card.cardFull.cardFull-slider.collapse
-		.cardFull-slider-wrap.card-wrap.cardFull-wrap
-			.cardFull-slider__item
+	#articleCollapseSlider01.card.card-full.card-full-slider.collapse
+		.card-full-slider-wrap.card-wrap.card-full-wrap
+			.card-full-slider__item
 				- var articleClass = 'article-slider';
 				include articles/_article-01
-			.cardFull-slider__item
+			.card-full-slider__item
 				include articles/_article-04
-			.cardFull-slider__item
+			.card-full-slider__item
 				include articles/_article-03
