--- a/pug/page/_page-head-filters.pug
+++ b/pug/page/_page-head-filters.pug
@@ -1,5 +1,5 @@
-.card.cardFull.cardFull-head
-	.card-wrap.cardFull-wrap.card-wrap-head
+.card.card-full.card-full-head
+	.card-wrap.card-full-wrap.card-wrap-head
 		.content-title
 			.content-titlebox
 				h1=pageTitle
