--- a/pug/post.pug
+++ b/pug/post.pug
@@ -2,7 +2,7 @@ extends modules/_base
 block vars
 	//- -var pageTitle = '';
 block content
-	.card.cardFull-head_special
+	.card.card-full-head_special
 	.cards
 		article(id=ID).article
 			.card.card_slim
