--- a/pug/video.pug
+++ b/pug/video.pug
@@ -7,7 +7,7 @@ block content
 	- var cardSettings = {title: 'Галерея - "Видео"', cardSize: 'xl', imgUrl: 'img/img-full-360.png', advantClass: 'card__videobox'};
 	include cards/_cards-full-galery-img
 	.cards
-		.card.cardFull-head_special
+		.card.card-full-head_special
 			.content-title
 				.content-titlebox_dark
 					h2 Галерея - "Видео-слайдер", тип "1"
@@ -22,7 +22,7 @@ block content
 		include cards/_card-full-slider-video
 
 	.cards
-		.card.cardFull-head_special
+		.card.card-full-head_special
 			.content-title
 				.content-titlebox_dark
 					h2 Галерея - "Видео-слайдер", тип "2"
@@ -38,7 +38,7 @@ block content
 		include cards/_card-half-slider-galery
 
 	.cards
-		.card.cardFull-head_special
+		.card.card-full-head_special
 			.content-title
 				.content-titlebox_dark
 					h2 Галерея - "Видео-слайдер", тип "3"
