--- a/sass/_header-scroll.scss
+++ b/sass/_header-scroll.scss
@@ -101,10 +101,10 @@
 		}
 	}
 
-	.menuNav-header {
+	.menu-nav-header {
 		display: block;
 	}
-	.headerNavSystem {
+	.header-nav-system {
 		position: relative;
 		&-wrap {
 			position: absolute;
