--- a/pug/blocks/_block-article-only-text.pug
+++ b/pug/blocks/_block-article-only-text.pug
@@ -1,6 +1,6 @@
 // Текст
 article(id=ID).article.cards
-	.card.cardFull-head_special
+	.card.card-full-head_special
 		.content-title
 			.content-titlebox_dark
 				h4 Текст
