--- a/pug/blocks/_block-logos.pug
+++ b/pug/blocks/_block-logos.pug
@@ -1,14 +1,14 @@
 // Логотипы или большие кнопки
 .cards
-	.card.cardFull-head_special
+	.card.card-full-head_special
 		.content-title
 			.content-titlebox_dark
 				h4 Логотипы или большие кнопки
-	.card.cardFull-head_special
+	.card.card-full-head_special
 		.content-title
 			.content-titlebox
 				h2 Логотипы партнеров мероприятия
-	.card.cardFull-head_special
+	.card.card-full-head_special
 		.card-logos
 			- var n = 0;
 			while n < 5
@@ -16,11 +16,11 @@
 				.card-logo
 					a.card-logo__imgbox
 						img(src="img/logo.png")
-	.card.cardFull-head_special
+	.card.card-full-head_special
 		.content-title
 			.content-titlebox
 				h2 Логотипы дочерних предприятий компании
-	.card.cardFull-head_special
+	.card.card-full-head_special
 		.card-logos
 			- var n = 0;
 			while n < 10
