--- a/pug/cards/_card-full-slider.pug
+++ b/pug/cards/_card-full-slider.pug
@@ -1,4 +1,4 @@
-.card.cardFull.cardFull-slider
+.card.card-full.card-full-slider
 	.post-info
 		.post-info__title
 			span.slider-number #54 из 82:
@@ -9,10 +9,10 @@
 				button.like-button
 					i.icon-like
 					span.like-count 2586
-	.cardFull-slider-wrap.card-wrap.cardFull-wrap
+	.card-full-slider-wrap.card-wrap.card-full-wrap
 		- var imagesUrl = ['img/img-block-full-01.jpg', 'img/img-block-full-03.jpg', 'img/img-block-full-04.jpg', 'img/img-block-full-02.jpg'];
 		- var imagesUrl = imagesUrl.concat(imagesUrl);
 		each imgUrl in imagesUrl
-			.cardFull-slider__item
-				.cardFull-slider__imgbox.card__imgbox(style='background-image: url('+imgUrl+');', data-target="#modalContentSlider", data-toggle="modal",data-target-content='#cardModalSlider-01')
+			.card-full-slider__item
+				.card-full-slider__imgbox.card__imgbox(style='background-image: url('+imgUrl+');', data-target="#modalContentSlider", data-toggle="modal",data-target-content='#cardModalSlider-01')
 					img.card-image(src=imgUrl)
