--- a/pug/cards/_card-mosaic-slider.pug
+++ b/pug/cards/_card-mosaic-slider.pug
@@ -1,10 +1,10 @@
-.card.cardFull.cardFull-slider
-	.cardFull-slider-wrap.card-wrap.cardFull-wrap
+.card.card-full.card-full-slider
+	.card-full-slider-wrap.card-wrap.card-full-wrap
 		//- - var i = '01';
 		- var imgClass = '';
 		- var imgBoxClass ='';
 
-		.cardFull-slider__item
+		.card-full-slider__item
 			.card__imgwrap.card__imgwrap_slim
 				- var imgUrl = 'img/article-img-02.jpg';
 				.card__imgbox.card__imgbox_twothird.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
@@ -39,7 +39,7 @@
 				.card__imgbox.card__imgbox_twothird.card__imgbox_md(style='background-image:url('+imgUrl+')', class=imgBoxClass)
 					img(src=imgUrl, alt="image", class=imgClass)
 
-		.cardFull-slider__item
+		.card-full-slider__item
 			.card__imgwrap.card__imgwrap_slim
 				- var imgUrl = 'img/block-img-01.jpg';
 				.card__imgbox.card__imgbox_twothird.card__imgbox_sm(style='background-image:url('+imgUrl+')', class=imgBoxClass)
