--- a/pug/cards/_card-third-slider.pug
+++ b/pug/cards/_card-third-slider.pug
@@ -1,13 +1,13 @@
 if cardSettings === undefined
 	-var cardSettings = {};
-.card.cardFull.cardFull-slider
-	.cardFull-slider-wrap.card-wrap.cardFull-wrap
-		.cardFull-slider__item
+.card.card-full.card-full-slider
+	.card-full-slider-wrap.card-wrap.card-full-wrap
+		.card-full-slider__item
 			.card__imgwrap
 				.card__imgbox.card__imgbox_third(class=cardSettings.advantClass, style='background-image: url(img/article-img-01.jpg)')
 				.card__imgbox.card__imgbox_third(class=cardSettings.advantClass, style='background-image: url(img/article-img-02.jpg)')
 				.card__imgbox.card__imgbox_third(class=cardSettings.advantClass, style='background-image: url(img/block-img-01.jpg)')
-		.cardFull-slider__item
+		.card-full-slider__item
 			.card__imgwrap
 				.card__imgbox.card__imgbox_third(class=cardSettings.advantClass, style='background-image: url(img/article-img-01.jpg)')
 				.card__imgbox.card__imgbox_third(class=cardSettings.advantClass, style='background-image: url(img/article-img-02.jpg)')
