--- a/pug/cards/_card-third-twothird-slider.pug
+++ b/pug/cards/_card-third-twothird-slider.pug
@@ -1,10 +1,10 @@
-.card.cardFull.cardFull-slider
-	.cardFull-slider-wrap.card-wrap.cardFull-wrap
-		.cardFull-slider__item
+.card.card-full.card-full-slider
+	.card-full-slider-wrap.card-wrap.card-full-wrap
+		.card-full-slider__item
 			.card__imgwrap
 				.card__imgbox.card__imgbox_third(style='background-image: url(img/article-img-01.jpg)')
 				.card__imgbox.card__imgbox_twothird(style='background-image: url(img/article-img-02.jpg)')
-		.cardFull-slider__item
+		.card-full-slider__item
 			.card__imgwrap
 				.card__imgbox.card__imgbox_third(style='background-image: url(img/article-img-01.jpg)')
 				.card__imgbox.card__imgbox_twothird(style='background-image: url(img/article-img-02.jpg)')
