--- a/pug/cards/_cards-full-galery-slider-text.pug
+++ b/pug/cards/_cards-full-galery-slider-text.pug
@@ -1,5 +1,5 @@
 .cards
-	.card.cardFull-head_special
+	.card.card-full-head_special
 		.content-title
 			.content-titlebox_dark
 				h2 Галерея - "Слайдер с описанием", тип "Светлый"
@@ -12,10 +12,10 @@
 		- var text= '24 Сентября 2018';
 		include ../modules/_tag-box
 
-	.card.cardFull.cardFull-slider
-		.cardFull-slider-wrap.card-wrap.cardFull-wrap
-			.cardFull-slider__item
-				.cardFull-slider__itembox_dark
+	.card.card-full.card-full-slider
+		.card-full-slider-wrap.card-wrap.card-full-wrap
+			.card-full-slider__item
+				.card-full-slider__itembox_dark
 					.card__imgbox.card__imgbox_xl(style='background-image: url(img/news-twothirds-img-01.jpg);')
 						img(src="img/news-twothirds-img-01.jpg", alt="image")
 					.card__info
@@ -28,8 +28,8 @@
 						.card__text
 							p
 								| Литейно-прокатный комплекс Выксунского металлургического завода (АО «ВМЗ», Нижегородская область, входит в состав Объединенной металлургической компании, АО «ОМК») за 10 лет работы произвел более 10,6 млн тонн горячекатаного рулонного проката, став важным звеном в полностью отечественной цепочке
-			.cardFull-slider__item
-				.cardFull-slider__itembox_dark
+			.card-full-slider__item
+				.card-full-slider__itembox_dark
 					.card__imgbox.card__imgbox_xl(style='background-image: url(img/article-img-01.jpg);')
 						img(src="img/article-img-01.jpg", alt="image")
 					.card__info
