--- a/sass/_cards.scss
+++ b/sass/_cards.scss
@@ -336,7 +336,7 @@
 	}
 
 
-	&Full {
+	&-full {
 		max-width: 100%;
 		flex: 0 0 100%;
 		&-head {
@@ -365,7 +365,7 @@
 		}
 		&_fullHeightImg {
 			color: $light-color;
-			.cardFull__content {
+			.card-full__content {
 				margin-top: 355px;
 				padding-top: 55px;
 				background: linear-gradient(to bottom, rgba(0,0,0,0) 0%,rgba(0,0,0,0.14) 14%,rgba(0,0,0,1) 100%); 
@@ -405,8 +405,8 @@
 	&Third {
 		max-width: 33.333333%;
 		flex: 0 0 33.333333%;
-		&-wrap {
-		}
+		// &-wrap {
+		// }
 		&__imgbox, &-slider__imgbox {
 			// margin-left: -15px;
 			// margin-right: -15px;
